# graphql-server

./: .gitignore  Dockerfile  README.md  client_example.py  example.py  pyproject.toml  uv-run-server-client-example.bat
app/: database.py  main.py  mutation.py  query.py  schemas.py  task.py
app/db/: database.py  models.py
app/strawb/: mutation.py  query.py  tasktype.py  utils.py
tests/: conftest.py  test_mutation.py  test_operations.py  test_query.py
