[project]
name = "graphql-server"
version = "0.1.0"
description = "A Server using FastAPI and Strawberry GraphQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "strawberry-graphql>=0.282.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app"]